[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1.89"
calamine = "0.30.0"
chrono = "0.4.41"
model = {path="../model"}
repository = {path="../repository"}
serde_json = "1.0.143"
serde = {version="1.0.219", features=["derive"]}
futures = "0.3.31"
tokio = {version="1.47.1", features=["fs", "io-util", "io-std"]}
csv-async = "1.3.1"
async-std = "1.13.2"
